Added portfolio section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="main.css">
     <link href="https://fonts.googleapis.com/css?family=Graduate&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav>
@@ -26,16 +28,38 @@
         </section>
     </header>
     <main>
+        <section class="portfolio">
+            <h2 class="header">PORTFOLIO</h2>
+            <div class="body">
+                <img src="./img/apartment-clean-condominium-279719.jpg" alt="" class="portfolio-category">
+                <img src="./img/apartment-ceiling-chairs-1571460.jpg" alt="" class="portfolio-category">
+                <img src="./img/apartment-armchair-chair-945225.jpg" alt="" class="portfolio-category">
+            </div>
+            <div class="arrow-btn-cont" id="left-arrow-btn-cont">
+                <div class="arrow-btn" id="left-arrow-btn"></div>
+                <p>Modern</p>
+            </div>
+            <div class="arrow-btn-cont"
+            id="right-arrow-btn-cont">
+                <div class="arrow-btn" id="right-arrow-btn"></div>
+                <p>Office</p>
+            </div>
+        </section>
         <section class="about">
-            <h2>ABOUT ME</h2>
+            <h2 class="header">ABOUT ME</h2>
             <div class="body">
                 <img src="./img/jenna.jpg" alt="">
                 <div class="body-text">
                     <h3>Meet Abby Johnson</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quasi nesciunt dolorem et non eveniet beatae? Quod incidunt rem rerum, fugiat in exercitationem porro deserunt officia labore, nesciunt ipsam eligendi itaque quis eum eius quisquam aut error, animi nobis ex nemo ducimus sit! Dicta, fugit tenetur impedit officia corrupti aliquid, omnis autem fugiat animi quibusdam molestiae quos error voluptas quis.</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque quasi nesciunt dolorem et non
+                        eveniet beatae? Quod incidunt rem rerum, fugiat in exercitationem porro deserunt officia labore,
+                        nesciunt ipsam eligendi itaque quis eum eius quisquam aut error, animi nobis ex nemo ducimus
+                        sit! Dicta, fugit tenetur impedit officia corrupti aliquid, omnis autem fugiat animi quibusdam
+                        molestiae quos error voluptas quis.</p>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
